# smart-learning-platform-backend

./: .gitignore  README.md  main.py  pyproject.toml
a2a_remote_routes/: __init__.py  apps.py  cards.py  services.py  stream_bridge.py
api/: app.py
config/: gemini_retry.py  llm_factory.py  properties.py
crawler/: crawl_ipgisa.py
credentials/: gcp_auth.py
db/faiss/: __init__.py  loader.py  search.py  store.py
docs/: README.md  a2a.md  agent_workflow.md  mcp.md  stream_communication.md  개발표준.md  실행가이드.md
embedding/: __init__.py  build_vector_store.py
log/: __init__.py  logger.py
mcp_server/: __init__.py
mcp_server/vertexai_search/: README.md  __init__.py  client.py  discovery_session.py  filter_extraction.py  schemas.py  search.py  server.py
nodes/: __init__.py  fallback.py  image_nodes.py  query_rewrite.py  rec_nodes.py  router.py  solver_nodes.py  store_query.py  tracer_nodes.py
schemas/: __init__.py  curator.py  intent.py  refine.py  solver.py  tracer.py
scratch/: test_backend_direct.py
search/: __init__.py
smart_learning_agent/: __init__.py  agent.py
smart_learning_agent/artifacts/: __init__.py  image.py
vertex_ai_search/: __init__.py  build_vertex_store_vertexai_jsonl.py  discovery_session.py  gemini_question_classifier.py  search.py  upload_vertex_store_vertexai.py
vertexai_search/: __init__.py  build_vertexai_datastore.py  discovery_session.py  question_classifier.py  search_vertexai.py  upload_vertexai_datastore.py
vertexai_search_etl/: __init__.py  build_datastore.py  question_classifier.py  schemas.py  upload_datastore.py
(+63 files in other folders)
